Try to fix issue on iOS

--- a/themes/landscape/source/css/_partial/splash.styl
+++ b/themes/landscape/source/css/_partial/splash.styl
@@ -17,6 +17,8 @@ transition-time = 1.2s
 
       #header-title
         top: 80%
+        @media mq-mobile
+          top 70%
 
       #banner
         filter: none
